# 1.4_BraceChecker

./: .info.json  .travis.yml  ArrayStat.cpp  ArrayStat.h  BraceChecker.cpp  BraceChecker.h  CMakeLists.txt  Makefile  README.md  main.cpp
solution/: .gitignore
test/: test.cpp
tests/: test1.cpp
