cmake_minimum_required (VERSION 3.1)

project(brace-checker)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_BUILD_TYPE Release)

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")

include_directories(".")

enable_testing()
add_executable(test1 tests/test1.cpp BraceChecker.cpp)
add_test(test1 test1)

add_executable(${CMAKE_PROJECT_NAME} main.cpp BraceChecker.cpp)
